--- a/app/src/main/res/layout/combat.xml
+++ b/app/src/main/res/layout/combat.xml
@@ -32,19 +32,24 @@
         <Button
             android:id="@+id/defendButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="Defend" />
 
         <TextView
             android:id="@+id/defendText"
-            android:layout_marginStart="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="TextView" />
 
     </LinearLayout>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/attackGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".7" />
 
     <LinearLayout
         android:id="@+id/attackCard"
@@ -60,22 +65,39 @@
         app:layout_constraintEnd_toStartOf="@+id/utilityCard"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/defendCard"
-        app:layout_constraintTop_toTopOf="@+id/bottomGuideline"
+        app:layout_constraintTop_toTopOf="@+id/attackGuideline"
         app:layout_constraintVertical_bias="0.0">
 
         <Button
             android:id="@+id/attackButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Attack" />
+            android:text="Attack"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/attackCooldownText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="^"
+            android:textAlignment="center"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/attackNameText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ATTACK"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/attackText"
-            android:layout_marginStart="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="TextView" />
 
     </LinearLayout>
@@ -100,16 +122,14 @@
         <Button
             android:id="@+id/utilityButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="Stun" />
 
         <TextView
             android:id="@+id/stunText"
-            android:layout_marginStart="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="TextView" />
 
     </LinearLayout>
@@ -134,16 +154,14 @@
         <Button
             android:id="@+id/stealButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:text="steal" />
 
         <TextView
             android:id="@+id/stealText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_weight="1"
             android:text="TextView" />
 
     </LinearLayout>
@@ -255,7 +273,7 @@
         android:id="@+id/playerHealthText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/healthBar"
         app:layout_constraintStart_toStartOf="parent" />
